--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.0",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
+    "stripe": "^16.2.0"
   }
 }
